plugins {
	id 'org.springframework.boot' version '2.6.3'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id "org.flywaydb.flyway" version "9.17.0"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	implementation "org.springframework.boot:spring-boot-starter-data-redis"
	implementation 'net.spy:spymemcached:2.12.3'
	implementation 'mysql:mysql-connector-java:8.0.27'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.flywaydb:flyway-core:7.4.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.12'
	implementation 'org.modelmapper:modelmapper:2.4.4'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	testImplementation 'org.testcontainers:testcontainers:1.15.3'
	implementation 'com.google.apis:google-api-services-drive:v3-rev20230603-2.0.0'
	implementation 'redis.clients:jedis:4.3.1'
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.3.0'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
	implementation 'com.google.http-client:google-http-client-gson:1.31.0'
	implementation 'com.google.http-client:google-http-client-apache-v2:1.31.0'
	implementation 'com.google.api-client:google-api-client:1.31.1'
	implementation 'com.google.api-client:google-api-client-jackson2:2.2.0'
	implementation 'org.apache.tika:tika-core:1.27'
}

flyway {
	driver = 'oracle.jdbc.OracleDriver'
	connectRetries = 10
	baselineVersion = 0
	locations = ["filesystem:src/main/resources/db/db/migration"]
}

tasks.named('test') {
	useJUnitPlatform()
}
